Update index to include stopwatch component

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Lit</title>
     <link rel="stylesheet" href="./src/index.css" />
-    <script type="module" src="/src/my-element.js"></script>
+    <script type="module" src="/src/stopwatch.js"></script>
   </head>
   <body>
-      <h1>Vite + Lit</h1>
+      <stop-watch></stop-watch>
   </body>
 </html>
